--- a/PriceCalc/Views/Base.lproj/Main.storyboard
+++ b/PriceCalc/Views/Base.lproj/Main.storyboard
@@ -107,35 +107,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="soviet libra" translatesAutoresizingMaskIntoConstraints="NO" id="7uJ-Ok-HLV">
-                                <rect key="frame" x="67" y="269" width="240" height="315"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="soviet libra" translatesAutoresizingMaskIntoConstraints="NO" id="7uJ-Ok-HLV">
+                                <rect key="frame" x="67" y="269" width="241" height="315"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="first Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DYe-Sr-oKS">
-                                <rect key="frame" x="16" y="111" width="115" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1 item $" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DYe-Sr-oKS">
+                                <rect key="frame" x="67" y="91" width="115" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="0Mb-4z-qTh"/>
+                                    <constraint firstAttribute="width" constant="115" id="5b7-Mt-iYg"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="first Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pwh-iq-KC6">
-                                <rect key="frame" x="16" y="149" width="115" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pwh-iq-KC6">
+                                <rect key="frame" x="67" y="129" width="115" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HOg-u4-lF7">
-                                <rect key="frame" x="244" y="149" width="115" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MjL-kg-cYN">
+                                <rect key="frame" x="16" y="91" width="42" height="68"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjK-E3-tBl">
+                                <rect key="frame" x="16" y="167" width="42" height="68"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ogL-Mz-Vo2">
+                                <rect key="frame" x="190" y="91" width="169" height="144"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HOg-u4-lF7">
+                                <rect key="frame" x="66" y="205" width="115" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G62-A0-dtR">
-                                <rect key="frame" x="244" y="111" width="115" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="I7L-Ld-m38"/>
-                                </constraints>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2 item $" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G62-A0-dtR">
+                                <rect key="frame" x="66" y="167" width="115" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
@@ -143,25 +159,46 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7uJ-Ok-HLV" firstAttribute="leading" secondItem="AFs-b5-tyF" secondAttribute="leading" constant="67" id="1Aq-Et-llW"/>
-                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="baseline" secondItem="G62-A0-dtR" secondAttribute="baseline" id="6Z2-01-za9"/>
-                            <constraint firstItem="Pwh-iq-KC6" firstAttribute="top" secondItem="DYe-Sr-oKS" secondAttribute="bottom" constant="8" symbolic="YES" id="As9-UE-YSh"/>
-                            <constraint firstItem="G62-A0-dtR" firstAttribute="leading" secondItem="HOg-u4-lF7" secondAttribute="leading" id="CTn-RR-Jbm"/>
-                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="leading" secondItem="Pwh-iq-KC6" secondAttribute="leading" id="FOt-Cy-ecb"/>
-                            <constraint firstItem="G62-A0-dtR" firstAttribute="trailing" secondItem="HOg-u4-lF7" secondAttribute="trailing" id="J2s-Yj-9zh"/>
-                            <constraint firstItem="Pwh-iq-KC6" firstAttribute="baseline" secondItem="HOg-u4-lF7" secondAttribute="baseline" id="Zda-9l-v8J"/>
-                            <constraint firstItem="AFs-b5-tyF" firstAttribute="bottom" secondItem="7uJ-Ok-HLV" secondAttribute="bottom" constant="83" id="dMf-L9-vsO"/>
-                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="trailing" secondItem="Pwh-iq-KC6" secondAttribute="trailing" id="gwV-YY-wwW"/>
-                            <constraint firstItem="7uJ-Ok-HLV" firstAttribute="top" secondItem="AFs-b5-tyF" secondAttribute="top" constant="205" id="hGR-6k-fE4"/>
-                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="top" secondItem="AFs-b5-tyF" secondAttribute="top" constant="47" id="l7N-6u-8mY"/>
-                            <constraint firstItem="7uJ-Ok-HLV" firstAttribute="centerX" secondItem="D1i-Rh-Axr" secondAttribute="centerX" id="mzO-nD-OJB"/>
-                            <constraint firstItem="G62-A0-dtR" firstAttribute="trailing" secondItem="D1i-Rh-Axr" secondAttribute="trailingMargin" id="xJt-GN-clg"/>
-                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="leading" secondItem="D1i-Rh-Axr" secondAttribute="leadingMargin" id="xnD-vO-6Tc"/>
+                            <constraint firstItem="G62-A0-dtR" firstAttribute="leading" secondItem="hjK-E3-tBl" secondAttribute="trailing" constant="8" symbolic="YES" id="0W4-l8-W2E"/>
+                            <constraint firstItem="Pwh-iq-KC6" firstAttribute="leading" secondItem="7uJ-Ok-HLV" secondAttribute="leading" id="1Sq-0z-qmU"/>
+                            <constraint firstItem="hjK-E3-tBl" firstAttribute="bottom" secondItem="HOg-u4-lF7" secondAttribute="bottom" id="3ri-sr-NOz"/>
+                            <constraint firstItem="MjL-kg-cYN" firstAttribute="leading" secondItem="D1i-Rh-Axr" secondAttribute="leadingMargin" id="5dx-EQ-cTZ"/>
+                            <constraint firstItem="HOg-u4-lF7" firstAttribute="top" secondItem="G62-A0-dtR" secondAttribute="bottom" constant="8" symbolic="YES" id="7nb-cp-sx5"/>
+                            <constraint firstItem="MjL-kg-cYN" firstAttribute="leading" secondItem="hjK-E3-tBl" secondAttribute="leading" id="7uo-he-EA2"/>
+                            <constraint firstItem="hjK-E3-tBl" firstAttribute="top" secondItem="G62-A0-dtR" secondAttribute="top" id="84i-pl-IBs"/>
+                            <constraint firstItem="7uJ-Ok-HLV" firstAttribute="top" secondItem="HOg-u4-lF7" secondAttribute="bottom" constant="34" id="9hv-P9-hF0"/>
+                            <constraint firstItem="hjK-E3-tBl" firstAttribute="top" secondItem="MjL-kg-cYN" secondAttribute="bottom" constant="8" symbolic="YES" id="DH8-Sg-b6E"/>
+                            <constraint firstItem="Pwh-iq-KC6" firstAttribute="top" secondItem="DYe-Sr-oKS" secondAttribute="bottom" constant="8" symbolic="YES" id="FML-e3-pLe"/>
+                            <constraint firstItem="MjL-kg-cYN" firstAttribute="trailing" secondItem="hjK-E3-tBl" secondAttribute="trailing" id="Kqa-Lj-wh6"/>
+                            <constraint firstItem="G62-A0-dtR" firstAttribute="leading" secondItem="HOg-u4-lF7" secondAttribute="leading" id="P4V-ck-dVA"/>
+                            <constraint firstItem="MjL-kg-cYN" firstAttribute="top" secondItem="AFs-b5-tyF" secondAttribute="top" constant="27" id="QZc-eb-n4U"/>
+                            <constraint firstItem="HOg-u4-lF7" firstAttribute="bottom" secondItem="ogL-Mz-Vo2" secondAttribute="bottom" id="SKi-vw-znu"/>
+                            <constraint firstItem="AFs-b5-tyF" firstAttribute="bottom" secondItem="7uJ-Ok-HLV" secondAttribute="bottom" constant="83" id="UQ7-6O-QJS"/>
+                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="top" secondItem="ogL-Mz-Vo2" secondAttribute="top" id="VCu-0x-gQ6"/>
+                            <constraint firstItem="ogL-Mz-Vo2" firstAttribute="trailing" secondItem="D1i-Rh-Axr" secondAttribute="trailingMargin" id="ZA3-eB-lu0"/>
+                            <constraint firstItem="7uJ-Ok-HLV" firstAttribute="leading" secondItem="AFs-b5-tyF" secondAttribute="leading" constant="67" id="d7u-bZ-Dqw"/>
+                            <constraint firstItem="7uJ-Ok-HLV" firstAttribute="centerX" secondItem="D1i-Rh-Axr" secondAttribute="centerX" id="ddJ-Ua-2Vh"/>
+                            <constraint firstItem="MjL-kg-cYN" firstAttribute="top" secondItem="DYe-Sr-oKS" secondAttribute="top" id="dqj-N0-SRb"/>
+                            <constraint firstItem="G62-A0-dtR" firstAttribute="trailing" secondItem="HOg-u4-lF7" secondAttribute="trailing" id="g5X-2r-0Nx"/>
+                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="leading" secondItem="Pwh-iq-KC6" secondAttribute="leading" id="l8u-Hr-W2O"/>
+                            <constraint firstItem="ogL-Mz-Vo2" firstAttribute="leading" secondItem="G62-A0-dtR" secondAttribute="trailing" constant="9" id="sG3-Ud-b9g"/>
+                            <constraint firstItem="ogL-Mz-Vo2" firstAttribute="leading" secondItem="Pwh-iq-KC6" secondAttribute="trailing" constant="8" symbolic="YES" id="sXN-p5-o6y"/>
+                            <constraint firstItem="G62-A0-dtR" firstAttribute="top" secondItem="Pwh-iq-KC6" secondAttribute="bottom" constant="8" symbolic="YES" id="vRd-75-DDb"/>
+                            <constraint firstItem="ogL-Mz-Vo2" firstAttribute="leading" secondItem="DYe-Sr-oKS" secondAttribute="trailing" constant="8" symbolic="YES" id="wlp-R3-LRp"/>
+                            <constraint firstItem="DYe-Sr-oKS" firstAttribute="leading" secondItem="MjL-kg-cYN" secondAttribute="trailing" constant="9" id="xjH-7d-uzh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AFs-b5-tyF"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Compares" id="oKr-bl-ykL"/>
+                    <navigationItem key="navigationItem" title="Compares" id="oKr-bl-ykL">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="2Qf-k0-wHk">
+                            <switch key="customView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="hKQ-7e-n2V">
+                                <rect key="frame" x="308" y="6.5" width="51" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="changeCalculateFormula" destination="hKQ-7e-n2V" id="NSL-9d-fDH"/>
                         <outlet property="firstItemPrice" destination="DYe-Sr-oKS" id="Izm-MH-UCo"/>
                         <outlet property="firstItemWeight" destination="Pwh-iq-KC6" id="g6u-Bp-el4"/>
                         <outlet property="secondItemPrice" destination="G62-A0-dtR" id="lCV-gV-w25"/>
