--- a/PriceCalc/Views/Base.lproj/Main.storyboard
+++ b/PriceCalc/Views/Base.lproj/Main.storyboard
@@ -18,73 +18,78 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ZqR-qK-sSQ">
-                                <rect key="frame" x="91" y="288" width="193" height="90"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VPN-6D-lUX">
-                                        <rect key="frame" x="0.0" y="0.0" width="193" height="30"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Adp-Hb-AaI">
-                                                <rect key="frame" x="0.0" y="0.0" width="96.5" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bPC-4S-Fyd">
-                                                <rect key="frame" x="96.5" y="0.0" width="96.5" height="30"/>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
-                                            </textField>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="FqA-cJ-PuI"/>
-                                        </constraints>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZGi-Zb-V6u">
-                                        <rect key="frame" x="0.0" y="30" width="193" height="30"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-wL-BNN">
-                                                <rect key="frame" x="0.0" y="0.0" width="96.5" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7a3-Aw-ElI">
-                                                <rect key="frame" x="96.5" y="0.0" width="96.5" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="3yU-zw-Y0t"/>
-                                                </constraints>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartQuotesType="no"/>
-                                            </textField>
-                                        </subviews>
-                                    </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lM0-Rm-jh0">
-                                        <rect key="frame" x="0.0" y="60" width="193" height="30"/>
-                                        <color key="backgroundColor" red="0.74005955457687378" green="0.80838888883590698" blue="0.93579632043838501" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="uO2-l2-TLa"/>
-                                        </constraints>
-                                        <color key="tintColor" red="0.92878693342208862" green="0.94462335109710693" blue="0.97779244184494019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Calc"/>
-                                        <connections>
-                                            <action selector="calculateValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UhL-Dc-wzE"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Adp-Hb-AaI">
+                                <rect key="frame" x="16" y="95" width="59" height="21"/>
                                 <constraints>
-                                    <constraint firstItem="ZGi-Zb-V6u" firstAttribute="centerY" secondItem="ZqR-qK-sSQ" secondAttribute="centerY" id="BKx-1i-Oqa"/>
+                                    <constraint firstAttribute="width" constant="59" id="pm3-2a-WJL"/>
                                 </constraints>
-                            </stackView>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bPC-4S-Fyd">
+                                <rect key="frame" x="83" y="90" width="97" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-wL-BNN">
+                                <rect key="frame" x="16" y="133" width="59" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="LBi-Ik-4f8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7a3-Aw-ElI">
+                                <rect key="frame" x="83" y="128" width="97" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartQuotesType="no"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lM0-Rm-jh0">
+                                <rect key="frame" x="16" y="167" width="31" height="30"/>
+                                <color key="backgroundColor" red="0.74005955457687378" green="0.80838888883590698" blue="0.93579632043838501" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.92878693342208862" green="0.94462335109710693" blue="0.97779244184494019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Calc"/>
+                                <connections>
+                                    <action selector="calculateValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UhL-Dc-wzE"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="325lcd_2" translatesAutoresizingMaskIntoConstraints="NO" id="VMt-5f-IVH">
+                                <rect key="frame" x="16" y="415" width="450" height="232"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XTb-YL-x5B">
+                                <rect key="frame" x="188" y="79" width="171" height="256"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ZqR-qK-sSQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="0TJ-CW-OHi"/>
-                            <constraint firstItem="ZqR-qK-sSQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="L1w-7y-wti"/>
-                            <constraint firstItem="ZqR-qK-sSQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YJs-O7-UAn"/>
-                            <constraint firstItem="ZqR-qK-sSQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="224" id="nU9-4Y-KlI"/>
+                            <constraint firstItem="Adp-Hb-AaI" firstAttribute="leading" secondItem="4xW-wL-BNN" secondAttribute="leading" id="1AZ-B7-QdQ"/>
+                            <constraint firstItem="lM0-Rm-jh0" firstAttribute="top" secondItem="7a3-Aw-ElI" secondAttribute="bottom" constant="9" id="23i-33-3qD"/>
+                            <constraint firstItem="lM0-Rm-jh0" firstAttribute="top" secondItem="4xW-wL-BNN" secondAttribute="bottom" constant="13" id="3Ap-GI-rnG"/>
+                            <constraint firstItem="7a3-Aw-ElI" firstAttribute="top" secondItem="bPC-4S-Fyd" secondAttribute="bottom" constant="8" symbolic="YES" id="GFE-aH-7Li"/>
+                            <constraint firstItem="bPC-4S-Fyd" firstAttribute="leading" secondItem="Adp-Hb-AaI" secondAttribute="trailing" constant="8" symbolic="YES" id="KtR-xl-RF9"/>
+                            <constraint firstItem="VMt-5f-IVH" firstAttribute="top" secondItem="XTb-YL-x5B" secondAttribute="bottom" constant="80" id="O80-fX-Sb9"/>
+                            <constraint firstItem="4xW-wL-BNN" firstAttribute="leading" secondItem="lM0-Rm-jh0" secondAttribute="leading" id="Qed-DE-1nk"/>
+                            <constraint firstItem="Adp-Hb-AaI" firstAttribute="centerY" secondItem="bPC-4S-Fyd" secondAttribute="centerY" id="WQz-My-ANa"/>
+                            <constraint firstItem="XTb-YL-x5B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="WSN-Ps-ggl"/>
+                            <constraint firstItem="bPC-4S-Fyd" firstAttribute="leading" secondItem="7a3-Aw-ElI" secondAttribute="leading" id="Z2v-sH-G91"/>
+                            <constraint firstItem="XTb-YL-x5B" firstAttribute="leading" secondItem="7a3-Aw-ElI" secondAttribute="trailing" constant="8" symbolic="YES" id="cjk-vD-YWq"/>
+                            <constraint firstItem="7a3-Aw-ElI" firstAttribute="leading" secondItem="4xW-wL-BNN" secondAttribute="trailing" constant="8" symbolic="YES" id="dHW-MR-qWQ"/>
+                            <constraint firstAttribute="bottom" secondItem="VMt-5f-IVH" secondAttribute="bottom" constant="20" symbolic="YES" id="kAq-G1-T7R"/>
+                            <constraint firstItem="4xW-wL-BNN" firstAttribute="centerY" secondItem="7a3-Aw-ElI" secondAttribute="centerY" id="lm2-Py-jGe"/>
+                            <constraint firstItem="Adp-Hb-AaI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="31" id="mk1-27-RLX"/>
+                            <constraint firstItem="Adp-Hb-AaI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sR9-Hh-CH0"/>
+                            <constraint firstItem="lM0-Rm-jh0" firstAttribute="leading" secondItem="VMt-5f-IVH" secondAttribute="leading" id="tJX-UH-Ply"/>
+                            <constraint firstItem="bPC-4S-Fyd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="26" id="vVe-Zd-qad"/>
+                            <constraint firstItem="XTb-YL-x5B" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="x7g-B6-4tM"/>
+                            <constraint firstItem="XTb-YL-x5B" firstAttribute="leading" secondItem="bPC-4S-Fyd" secondAttribute="trailing" constant="8" symbolic="YES" id="yZf-dl-BvJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -275,6 +280,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="325lcd_2" width="450" height="232"/>
         <image name="balance" width="24" height="24"/>
         <image name="information-3" width="24" height="24"/>
         <image name="kisspng-slavs-gopnik-ukrainians-russian-squat-5aeabb1fd2f611.9623455815253327678641" width="800" height="793"/>
